--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,9 +35,8 @@ nav ul li a {
   width: 100px;
 }
 .content {
-  height: calc(100vh - 310px);
-  padding: 2rem;
   display: flex;
+  height: 100vh;
   flex-direction: column;
   justify-content: start;
   align-items: center;
